RESOLVED FIXED109726
ForwardInt32ToDouble is not in DFG::MinifiedNode's list of relevant node types
https://bugs.webkit.org/show_bug.cgi?id=109726
Summary ForwardInt32ToDouble is not in DFG::MinifiedNode's list of relevant node types
Filip Pizlo
Reported 2013-02-13 11:55:58 PST
Patch forthcoming.
Attachments
fix (1.56 KB, patch)
2013-02-13 14:29 PST, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-02-13 13:16:03 PST
This is asymptomatic because ForwardInt32ToDouble is only used in SetLocals, in which case the value is already stored to the stack. Still, we should fix this.
Filip Pizlo
Comment 2 2013-02-13 13:16:56 PST
Reviewed by Gavin in person.
Filip Pizlo
Comment 3 2013-02-13 13:17:30 PST
Filip Pizlo
Comment 4 2013-02-13 14:22:35 PST
This is causing run-javascriptcore-tests failures. Fix on the way.
Filip Pizlo
Comment 5 2013-02-13 14:29:02 PST
Mark Hahnenberg
Comment 6 2013-02-13 14:35:29 PST
Comment on attachment 188183 [details] fix View in context: https://bugs.webkit.org/attachment.cgi?id=188183&action=review r=me with ChangeLog fix. > Source/JavaScriptCore/ChangeLog:23 > +2013-02-13 Filip Pizlo <fpizlo@apple.com> > + > + Need a short description (OOPS!). > + Need the bug URL (OOPS!). > + > + Reviewed by NOBODY (OOPS!). > + > + * dfg/DFGMinifiedNode.h: > + (JSC::DFG::MinifiedNode::hasChild): ???
Filip Pizlo
Comment 7 2013-02-13 14:36:46 PST
(In reply to comment #6) > (From update of attachment 188183 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=188183&action=review > > r=me with ChangeLog fix. > > > Source/JavaScriptCore/ChangeLog:23 > > +2013-02-13 Filip Pizlo <fpizlo@apple.com> > > + > > + Need a short description (OOPS!). > > + Need the bug URL (OOPS!). > > + > > + Reviewed by NOBODY (OOPS!). > > + > > + * dfg/DFGMinifiedNode.h: > > + (JSC::DFG::MinifiedNode::hasChild): > > ??? Removed. I dunno what happened there.
Filip Pizlo
Comment 8 2013-02-13 14:38:01 PST
Note You need to log in before you can comment on or make changes to this bug.