ForwardInt32ToDouble is not in DFG::MinifiedNode's list of relevant node types https://bugs.webkit.org/show_bug.cgi?id=109726

Reviewed by Gavin Barraclough.

This is asymptomatic because ForwardInt32ToDouble is only used in SetLocals, in
which case the value is already stored to the stack.  Still, we should fix this.

* dfg/DFGMinifiedNode.h:
(JSC::DFG::belongsInMinifiedGraph):



Canonical link: https://commits.webkit.org/128000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142780 268f45cc-cd09-0410-ab3c-d52691b4dbfc