Source/JavaScriptCore/dfg/DFGMinifiedNode.h
@@ -45,6 +45,7 @@ inline bool belongsInMinifiedGraph(NodeType type)
     case WeakJSConstant:
     case ValueToInt32:
     case Int32ToDouble:
+    case ForwardInt32ToDouble:
     case UInt32ToNumber:
     case DoubleAsInt32:
     case PhantomArguments:
